# XRPL-Template-system

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GETTING_STARTED.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
ai/: README.md  run.py
ai/config/: ai_policy.yaml
ai/src/: __init__.py  config.py  swarm.py
ai/src/agents/: market_agent.py  risk_agent.py  risk_agent2.py  scoring_agent.py  trader_agent.py
ai/src/tools/: scoring_reader.py  scoring_reader_clean.py
data/: assets.json
docs/: README.md  xrpl_competition_analysis.md
docs/api/: stablecoins.template.md
docs/case_studies/: vortex_spring_water_tokenization.md
docs/compliance/: ASSET-ISSUANCE-INTAKE.template.md  COMPLIANCE-VENDOR-GUIDE.md  GLOBAL-COMPLIANCE-FRAMEWORK.template.md  JURISDICTION-COMPLIANCE-MAP.md  KYC-AML-PROGRAM.template.md  README.md  SECURITY-CONTROLS.template.md
docs/enterprise/: ASSET_LTV_MATRIX.md  QUICK_REFERENCE.md  RWA_OPERATIONS_MANUAL.md
docs/infrastructure/: DUAL_LEDGER_ARCHITECTURE.md  XRPL_PRIVATE_CLUSTER_SETUP.md
docs/operations/: COLLATERAL_TRIAGE_FRAMEWORK.md  DEV_ENV.md  QUICK_START_COLLATERAL_TRIAGE.md
docs/regulatory/: ASSET-REGULATORY-PROFILE.template.md  FTHUSD-REGULATORY-PROFILE.md  README.md
docs/rwa/: RUBY_VAULT_TEMPLATE.md
docs/scoring/: Assets.current.md  README.md
docs/technical/: SANTANDER_FACILITY_TECHNICAL_IMPLEMENTATION.md
docs/templates/bank-filings/: BankFilings.page.template.md
docs/templates/checklists/: 10Step_Publish.checklist.md  48h_Sprint.checklist.md
docs/templates/ops/: FacilityI_Playbook.template.md  PoR_Oracle_Runbook.template.md
docs/templates/partners/: PartnerRails_OnePager.template.md
docs/templates/scoring/: AssetIntake.template.md  AssetLiquidityFocus.template.md  AssetLiquidityScoring.template.md  AssetScoringWeights.jsonc  LiquiditySprintBoard.template.md  RejectLog.template.md
docs/templates/technical/: Santander_Facility_Implementation.template.md
docs/templates/term-sheets/: IPBackedNote_TermSheet.template.md  WhiteLabel_License_TermSheet.template.md
docs/templates/vaults/: VaultProof.metadata.jsonc
history/asset_scores/: asset_scores-.csv
output/: Focus.current.md  asset_scores.md
output/ai_runs/: ai_run_20251117T072128Z.json
scripts/: asset_scoring.py  generate_assets_index.py  test_asset_scoring.py
tests/: test_config_policy_loading.py  test_risk_agent_gates.py
tools/: weekly.ps1
